--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 
 server.port=8081
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
