--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/rest_quiz
+spring.datasource.url=jdbc:mysql://mysql-container:3306/rest_quiz
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,4 +12,4 @@ spring.jpa.open-in-view=true
 
 server.port=8081
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://quiz-service-registry:8761/eureka/
