--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.open-in-view=true
 server.port=8081
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+springdoc.packages-to-scan=com.example.questionsservice.* , com.example.questionsservice.controller
+springdoc.paths-to-match=/questions/** , /*
