refactor(application.properties): add comment for Swagger-ui documentation url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
+#Swagger-UI url:  http://localhost:8081/swagger-ui/index.html
 springdoc.packages-to-scan=com.example.questionsservice.* , com.example.questionsservice.controller
 springdoc.paths-to-match=/questions/** , /*
